<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#DAE0E2"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Developer">



  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardCornerRadius="6dp"
      android:layout_margin="6dp">

      <LinearLayout
          android:layout_margin="15dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <de.hdodenhof.circleimageview.CircleImageView
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/profile_image"
              android:layout_width="200dp"
              android:layout_height="200dp"
              android:layout_gravity="center"
              android:layout_marginTop="25dp"
              android:layout_marginBottom="50dp"
              android:src="@drawable/vips"
              app:civ_border_width="2dp"
              app:civ_border_color="#FF000000"/>
          <LinearLayout
              android:paddingBottom="8dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              <ImageView
                  android:layout_margin="3dp"
                  android:src="@drawable/ic_person_black_24dp"
                  android:layout_width="30dp"
                  android:layout_height="30dp" />
              <LinearLayout
                  android:layout_marginLeft="15dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

                  <TextView
                      android:textStyle="bold"
                      android:text="Developer"
                      android:textColor="@android:color/background_dark"
                      android:layout_margin="1dp"
                      android:textSize="16sp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />
                  <TextView
                      android:textSize="12sp"
                      android:layout_margin="1dp"
                      android:textStyle="bold"
                      android:text="@string/developer"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />
              </LinearLayout>

          </LinearLayout>
          <View
              android:layout_marginBottom="7dp"
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="#000"
              />
          <LinearLayout
              android:paddingBottom="8dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              <ImageView
                  android:layout_margin="3dp"
                  android:src="@drawable/ic_location_city_black_24dp"
                  android:layout_width="30dp"
                  android:layout_height="30dp" />
              <LinearLayout
                  android:layout_marginLeft="15dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

                  <TextView
                      android:textStyle="bold"
                      android:text="State"
                      android:textColor="@android:color/background_dark"
                      android:layout_margin="1dp"
                      android:textSize="16sp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />
                  <TextView
                      android:textSize="12sp"
                      android:layout_margin="1dp"
                      android:textStyle="bold"
                      android:text="@string/state"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />
              </LinearLayout>

          </LinearLayout>
          <View
              android:layout_marginBottom="7dp"
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="#000"
              />
          <LinearLayout
              android:paddingBottom="8dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              <ImageView
                  android:layout_margin="3dp"
                  android:src="@drawable/ic_access_time_black_24dp"
                  android:layout_width="30dp"
                  android:layout_height="30dp" />
              <LinearLayout
                  android:layout_marginLeft="15dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

                  <TextView
                      android:textStyle="bold"
                      android:text="@string/Time"
                      android:textColor="@android:color/background_dark"
                      android:layout_margin="1dp"
                      android:textSize="16sp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />
                  <TextView
                      android:textSize="12sp"
                      android:layout_margin="1dp"
                      android:textStyle="bold"
                      android:text="9 days"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />
              </LinearLayout>

          </LinearLayout>
          <View
              android:layout_marginBottom="7dp"
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="#000"
              />

          <LinearLayout
              android:paddingBottom="8dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              <ImageView
                  android:layout_margin="3dp"
                  android:src="@drawable/ic_attach_money_black_24dp"
                  android:layout_width="30dp"
                  android:layout_height="30dp" />
              <LinearLayout
                  android:layout_marginLeft="15dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

                  <TextView
                      android:textStyle="bold"
                      android:text="@string/Price"
                      android:textColor="@android:color/background_dark"
                      android:layout_margin="1dp"
                      android:textSize="16sp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />
                  <TextView
                      android:textSize="12sp"
                      android:layout_margin="1dp"
                      android:textStyle="bold"
                      android:text="--"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />
              </LinearLayout>

          </LinearLayout>
          <View
              android:layout_marginBottom="7dp"
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="#000"
              />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              <ImageView
                  android:layout_margin="3dp"
                  android:src="@drawable/ic_info_black_24dp"
                  android:layout_width="30dp"
                  android:layout_height="30dp" />
              <LinearLayout
                  android:layout_marginLeft="15dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

                  <TextView
                      android:textStyle="bold"
                      android:text="Project Idea"
                      android:textColor="@android:color/background_dark"
                      android:layout_margin="1dp"
                      android:textSize="16sp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />
                  <TextView
                      android:id="@+id/link"
                      android:textSize="12sp"
                      android:layout_margin="1dp"
                      android:text="@string/link"
                      android:textStyle="bold"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />
              </LinearLayout>

          </LinearLayout>


          <LinearLayout
              android:layout_marginTop="25dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="horizontal">
              <Button
                  android:id="@+id/linkedin"
                  android:layout_margin="30dp"
                  android:background="@drawable/linkedin"
                  android:layout_width="40dp"
                  android:layout_height="40dp" />

              <Button
                  android:id="@+id/github"
                  android:layout_margin="30dp"
                  android:background="@drawable/github"
                  android:layout_width="40dp"
                  android:layout_height="40dp" />
              <Button
                  android:id="@+id/instagram"
                  android:layout_margin="30dp"
                  android:background="@drawable/instagram"
                  android:layout_width="40dp"
                  android:layout_height="40dp" />


          </LinearLayout>

      </LinearLayout>


  </androidx.cardview.widget.CardView>



</LinearLayout>